--- a/src/app/intext/intext.component.html
+++ b/src/app/intext/intext.component.html
@@ -5,10 +5,10 @@
       <input [(ngModel)]="textField" type="text" (keyup)="addSpace()">
     </div>
     <div>
-      <label>L {{mainText|slice : 0 : pStartPos +1}}</label>
+      <label>{{mainText|slice : 0 : pStartPos +1}}</label>
       <label class="solid-red">{{p}}</label>
       <label class="solid-blue">{{c}}</label>
-      <label>R {{mainText|slice : pos + 1}}</label>
+      <label>{{mainText|slice : pos + 1}}</label>
     </div>
     <div>
       <button (click)="onClickMe()">Click me!</button>
