--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <h1>
     Welcome to {{title}}
   </h1>
-  <app-intext></app-intext>
+  <app-lzw></app-lzw>
 </div>
 <router-outlet></router-outlet>
