added mark daly table

--- a/src/app/lzw/lzw.component.html
+++ b/src/app/lzw/lzw.component.html
@@ -11,7 +11,7 @@
       <label>{{mainText|slice : pos + 1}}</label>
     </div>
     <div>
-      <button (click)="init()">Init</button>
+      <button (click)="init()">Init 1</button>
       <button (click)="onClickMe()">Step by Step</button>
     </div>
     <div>
