--- a/src/app/lzw/lzw.component.html
+++ b/src/app/lzw/lzw.component.html
@@ -1,81 +1,96 @@
 <h2> LZW Compression / Decompression </h2>
-<div class="row">
-  <div class="three-column">
-    <div>
-      <input [(ngModel)]="textField" type="text" >
-    </div>
-    <div>
-      <label>{{mainText|slice : 0 : pStartPos +1}}</label>
-      <label class="solid-red">{{p}}</label>
-      <label class="solid-blue">{{c}}</label>
-      <label>{{mainText|slice : pos + 1}}</label>
-    </div>
-    <div>
-      <button (click)="init()">Init 1</button>
-      <button (click)="onClickMe()">Step by Step</button>
-    </div>
-    <div>
-      <mat-checkbox [(ngModel)]="useMarkTable">Use MarkDaly Table</mat-checkbox>
-      <mat-checkbox [(ngModel)]="autoRun" (click)="auto()">Auto Run</mat-checkbox>
-    </div>
-  </div>
-  <div class="three-column">
-    <div>P = {{p}}</div>
-    <div>C = {{c}}</div>
-    <div>P + C = {{p + c}}</div>
-    <div>codestream = {{codestream}}</div>
-    <div>pos = {{pos}}</div>
-  </div>
-  <div class="three-column">
-    <table border="1">
-      <tr><th>step</th><th>p</th><th>c</th><th>p + c</th><th>found in</th><th>out</th></tr>
-    <tr *ngFor = "let row of dict">
-      <td>
-        {{row.step}}
-      </td>
-      <td>
-        {{row.p}}
-      </td>
-      <td>
-        {{row.c}}
-      </td>
-      <td>
-        {{row.p + row.c}}
-      </td>
-      <td>
-        {{row.foundInDic}}
-      </td>
-      <td>
-        ({{row.dictVal}}){{row.dictCode}}
-      </td>
-    </tr>
-    </table>
-  </div>
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div>
+        <input [(ngModel)]="textField" type="text">
+      </div>
+      <div>
+        <label>{{mainText|slice : 0 : pStartPos +1}}</label>
+        <label class="solid-red">{{p}}</label>
+        <label class="solid-blue">{{c}}</label>
+        <label>{{mainText|slice : pos + 1}}</label>
+      </div>
+      <div>
+        <button (click)="init()">Init 1</button>
+        <button (click)="onClickMe()">Step by Step</button>
+      </div>
+      <div>
+        <mat-checkbox [(ngModel)]="useMarkTable">Use MarkDaly Table</mat-checkbox>
+        <mat-checkbox [(ngModel)]="autoRun" (click)="auto()">Auto Run</mat-checkbox>
+      </div>
 
-<div class="row">
-
-  <ul class="oul">
-    <li [ngClass]="{'selected': flowStep==10}">At the start the dictionary contains all possible roots and P is empty.</li>
-    <li [ngClass]="{'selected': flowStep==20}">Let C be the next character in the stream</li>
-    <li [ngClass]="{'selected': flowStep==30}">Is the new string P+C present in the dictionary?
-      <ul>
-        <li [ngClass]="{'selected': flowStep==40}"> If yes, P = P+C (extend the string P with C)</li>
-        <li [ngClass]="{'selected': flowStep==50}"> If no, then
-          <ul>
-            <li [ngClass]="{'selected': flowStep==60}">Output the code word which represents P to the codestream</li>
-            <li [ngClass]="{'selected': flowStep==70}"> Add the string P+C to the dictionary</li>
-            <li [ngClass]="{'selected': flowStep==80}"> Set P=C (P contains only C now)</li>
-          </ul>
+      <ul class="oul">
+        <li [ngClass]="{'selected': flowStep==10}">At the start the dictionary contains all possible roots and P is
+          empty.
         </li>
-        <li [ngClass]="{'selected': flowStep==90}"> Check if there are more characters in the stream
+        <li [ngClass]="{'selected': flowStep==20}">Let C be the next character in the stream</li>
+        <li [ngClass]="{'selected': flowStep==30}">Is the new string P+C present in the dictionary?
           <ul>
-            <li [ngClass]="{'selected': flowStep==100}">If yes, go back to the second step</li>
-            <li [ngClass]="{'selected': flowStep==110}">If no, then output the code representing P to the codestream and end</li>
+            <li [ngClass]="{'selected': flowStep==40}"> If yes, P = P+C (extend the string P with C)</li>
+            <li [ngClass]="{'selected': flowStep==50}"> If no, then
+              <ul>
+                <li [ngClass]="{'selected': flowStep==60}">Output the code word which represents P to the codestream
+                </li>
+                <li [ngClass]="{'selected': flowStep==70}"> Add the string P+C to the dictionary</li>
+                <li [ngClass]="{'selected': flowStep==80}"> Set P=C (P contains only C now)</li>
+              </ul>
+            </li>
+            <li [ngClass]="{'selected': flowStep==90}"> Check if there are more characters in the stream
+              <ul>
+                <li [ngClass]="{'selected': flowStep==100}">If yes, go back to the second step</li>
+                <li [ngClass]="{'selected': flowStep==110}">If no, then output the code representing P to the codestream
+                  and end
+                </li>
+              </ul>
+            </li>
           </ul>
         </li>
       </ul>
-    </li>
-  </ul>
+    </div>
+    <div class="col-sm">
+      <div>P = {{p}}</div>
+      <div>C = {{c}}</div>
+      <div>P + C = {{p + c}}</div>
+      <div>codestream = {{codestream}}</div>
+      <div>pos = {{pos}}</div>
+    </div>
+    <div class="col-sm">
+
+      <div class="three-column">
+        <table border="1">
+          <tr>
+            <th>step</th>
+            <th>p</th>
+            <th>c</th>
+            <th>p + c</th>
+            <th>found in</th>
+            <th>out</th>
+          </tr>
+          <tr *ngFor="let row of dict">
+            <td>
+              {{row.step}}
+            </td>
+            <td>
+              {{row.p}}
+            </td>
+            <td>
+              {{row.c}}
+            </td>
+            <td>
+              {{row.p + row.c}}
+            </td>
+            <td>
+              {{row.foundInDic}}
+            </td>
+            <td>
+              ({{row.dictVal}}){{row.dictCode}}
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
 
 </div>
+
