--- a/src/app/lzw/lzw.component.css
+++ b/src/app/lzw/lzw.component.css
@@ -10,12 +10,19 @@ label.solid-red {
     font-size: 25px
 }
 
+label {
+  font-size: 25px;
+  word-break:break-all;
+  table-layout:fixed;
+}
+
 * {
   box-sizing: border-box;
 }
 
 .oul {
   text-align:left;
+  margin-top: 40px
 }
 
 .selected
