--- a/src/app/lzw/lzw.component.css
+++ b/src/app/lzw/lzw.component.css
@@ -10,7 +10,7 @@ label.solid-red {
     font-size: 25px
 }
 
-label {
+label.large {
   font-size: 25px;
   word-break:break-all;
   table-layout:fixed;
