--- a/src/app/lzw/lzw.component.html
+++ b/src/app/lzw/lzw.component.html
@@ -4,58 +4,53 @@
     <div class="col-xl">
       <div class="row">
         <div class="col-xl border border-primary">
-          <div class="col">
-            <label>Root Dictionary Codes</label>
-            <input [(ngModel)]="rootDictCodes" type="text" style="margin-left:5px">
-          </div>
-          <div class="col">
-            <label>Input</label>
-            <input [(ngModel)]="textField" type="text" style="margin-left:5px">
-          </div>
-          <div>
-            <label class="large">{{mainText|slice : 0 : pStartPos +1}}</label>
-            <label class="solid-red">{{p}}</label>
-            <label class="solid-blue">{{c}}</label>
-            <label class="large">{{mainText|slice : pos + 1}}</label>
-          </div>
-          <div>
-            <button (click)="init()">Init</button>
-            <button (click)="onClickMe()">Step by Step</button>
-          </div>
-          <div>
-            <mat-checkbox [(ngModel)]="useMarkTable">Use MarkDaly Table</mat-checkbox>
-            <mat-checkbox [(ngModel)]="autoRun" (click)="auto()">Auto Run</mat-checkbox>
-          </div>
+      <div class="col">
+        <label>Input</label>
+        <input [(ngModel)]="textField" type="text" style="margin-left:5px">
+      </div>
+      <div>
+        <label>{{mainText|slice : 0 : pStartPos +1}}</label>
+        <label class="solid-red">{{p}}</label>
+        <label class="solid-blue">{{c}}</label>
+        <label>{{mainText|slice : pos + 1}}</label>
+      </div>
+      <div>
+        <button (click)="init()">Init</button>
+        <button (click)="onClickMe()">Step by Step</button>
+      </div>
+      <div>
+        <mat-checkbox [(ngModel)]="useMarkTable">Use MarkDaly Table</mat-checkbox>
+        <mat-checkbox [(ngModel)]="autoRun" (click)="auto()">Auto Run</mat-checkbox>
+      </div>
 
-          <ul class="oul">
-            <li [ngClass]="{'selected': flowStep==10}">At the start the dictionary contains all possible roots and P is
-              empty.
-            </li>
-            <li [ngClass]="{'selected': flowStep==20}">Let C be the next character in the stream</li>
-            <li [ngClass]="{'selected': flowStep==30}">Is the new string P+C present in the dictionary?
+      <ul class="oul">
+        <li [ngClass]="{'selected': flowStep==10}">At the start the dictionary contains all possible roots and P is
+          empty.
+        </li>
+        <li [ngClass]="{'selected': flowStep==20}">Let C be the next character in the stream</li>
+        <li [ngClass]="{'selected': flowStep==30}">Is the new string P+C present in the dictionary?
+          <ul>
+            <li [ngClass]="{'selected': flowStep==40}"> If yes, P = P+C (extend the string P with C)</li>
+            <li [ngClass]="{'selected': flowStep==50}"> If no, then
               <ul>
-                <li [ngClass]="{'selected': flowStep==40}"> If yes, P = P+C (extend the string P with C)</li>
-                <li [ngClass]="{'selected': flowStep==50}"> If no, then
-                  <ul>
-                    <li [ngClass]="{'selected': flowStep==60}">Output the code word which represents P to the codestream
-                    </li>
-                    <li [ngClass]="{'selected': flowStep==70}"> Add the string P+C to the dictionary</li>
-                    <li [ngClass]="{'selected': flowStep==80}"> Set P=C (P contains only C now)</li>
-                  </ul>
+                <li [ngClass]="{'selected': flowStep==60}">Output the code word which represents P to the codestream
                 </li>
-                <li [ngClass]="{'selected': flowStep==90}"> Check if there are more characters in the stream
-                  <ul>
-                    <li [ngClass]="{'selected': flowStep==100}">If yes, go back to the second step</li>
-                    <li [ngClass]="{'selected': flowStep==110}">If no, then output the code representing P to the
-                      codestream
-                      and end
-                    </li>
-                  </ul>
+                <li [ngClass]="{'selected': flowStep==70}"> Add the string P+C to the dictionary</li>
+                <li [ngClass]="{'selected': flowStep==80}"> Set P=C (P contains only C now)</li>
+              </ul>
+            </li>
+            <li [ngClass]="{'selected': flowStep==90}"> Check if there are more characters in the stream
+              <ul>
+                <li [ngClass]="{'selected': flowStep==100}">If yes, go back to the second step</li>
+                <li [ngClass]="{'selected': flowStep==110}">If no, then output the code representing P to the codestream
+                  and end
                 </li>
               </ul>
             </li>
           </ul>
-        </div>
+        </li>
+      </ul>
+    </div>
       </div>
     </div>
     <div class="col-xl">
@@ -64,10 +59,7 @@
       <div>P + C = {{p + c}}</div>
       <div>codestream = {{codestream}}</div>
       <div>pos = {{pos}}</div>
-      <div>The efficiency = 1 - (Number of codestream codes + Root dictionary size) / Length of the original charstream
-        = 1 - ({{numOfCodeStreamCode}} + {{rootDictSize}}) / {{mainText.length}} =
-        {{(1-(numOfCodeStreamCode+rootDictSize)/mainText.length)*100}} %
-      </div>
+      <div>The efficiency = 1 - (Number of codestream codes + Root dictionary size) / Length of the original charstream = 1 - ({{numOfCodeStreamCode}} + {{rootDictSize}}) / {{mainText.length}} = {{(1-(numOfCodeStreamCode+rootDictSize)/mainText.length)*100}} % </div>
     </div>
     <div class="col-xl">
       <div class="row">
