--- a/src/app/lzw/lzw.component.html
+++ b/src/app/lzw/lzw.component.html
@@ -54,8 +54,8 @@
       </div>
     </div>
     <div class="col-xl">
-      <div>P = {{p}}</div>
-      <div>C = {{c}}</div>
+      <div><span class="border border-primary">P = {{p}}</span></div>
+      <div><span class="border border-danger">C = {{c}}</span></div>
       <div>P + C = {{p + c}}</div>
       <div>codestream = {{codestream}}</div>
       <div>pos = {{pos}}</div>
