lzw decompression initial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <h1>
     Welcome to {{title}}
   </h1>
+  <app-lzwd></app-lzwd>
   <app-lzwc></app-lzwc>
 </div>
 <router-outlet></router-outlet>
