--- a/src/app/lzwc/lzwc.component.html
+++ b/src/app/lzwc/lzwc.component.html
@@ -1,4 +1,4 @@
-<h2> LZW Compression / Decompression </h2>
+<h2> LZW Compression</h2>
 <div class="container-fluid">
   <div class="row">
     <div class="col-xl">
@@ -54,8 +54,8 @@
       </div>
     </div>
     <div class="col-xl">
-      <div><span class="border border-primary">P = {{p}}</span></div>
-      <div><span class="border border-danger">C = {{c}}</span></div>
+      <div><span class="border border-danger">P = {{p}}</span></div>
+      <div><span class="border border-primary">C = {{c}}</span></div>
       <div>P + C = {{p + c}}</div>
       <div>codestream = {{codestream}}</div>
       <div>pos = {{pos}}</div>
