--- a/src/app/lzwd/lzwd.component.html
+++ b/src/app/lzwd/lzwd.component.html
@@ -1,1 +1,106 @@
-<p>lzwd works!</p>
+<h2> LZW Decompression</h2>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xl">
+      <div class="row">
+        <div class="col-xl border border-primary">
+          <div class="col">
+            <label>Initial Dictionary</label>
+            <input [(ngModel)]="initDictTxt" type="text" style="margin-left:5px">
+          </div>
+          <div class="col">
+            <label>Input</label>
+            <input [(ngModel)]="inputTxt" type="text" style="margin-left:5px">
+          </div>
+          <div>
+            <label class="large">{{mainText|slice : 0 : pStartPos +1}}</label>
+            <label class="solid-red">{{p}}</label>
+            <label class="solid-blue">{{c}}</label>
+            <label class="large">{{mainText|slice : pos + 1}}</label>
+          </div>
+          <div>
+            <button (click)="init()">Init</button>
+            <button (click)="onClick()">Step by Step</button>
+          </div>
+          <div>
+            <mat-checkbox [(ngModel)]="useMarkTable">Use MarkDaly Table</mat-checkbox>
+            <mat-checkbox [(ngModel)]="autoRun" (click)="auto()">Auto Run</mat-checkbox>
+          </div>
+
+          <ul class="oul">
+            <li [ngClass]="{'bg-warning': flowStep=='0'}">Init
+            </li>
+            <li [ngClass]="{'bg-warning': flowStep=='1'}">At the start the dictionary contains all possible roots and P is
+              empty.
+            </li>
+            <li [ngClass]="{'bg-warning': flowStep=='2'}">Let C be the next character in the stream</li>
+            <li [ngClass]="{'bg-warning': flowStep=='3'}">Is the new string P+C present in the dictionary?
+              <ul>
+                <li [ngClass]="{'bg-warning': flowStep=='4'}"> If yes, P = P+C (extend the string P with C)</li>
+                <li [ngClass]="{'bg-warning': flowStep=='5'}"> If no, then
+                  <ul>
+                    <li [ngClass]="{'bg-warning': flowStep=='6'}">Output the code word which represents P to the codestream
+                    </li>
+                    <li [ngClass]="{'bg-warning': flowStep=='70'}"> Add the string P+C to the dictionary</li>
+                    <li [ngClass]="{'bg-warning': flowStep=='80'}"> Set P=C (P contains only C now)</li>
+                  </ul>
+                </li>
+                <li [ngClass]="{'bg-warning': flowStep=='90'}"> Check if there are more characters in the stream
+                  <ul>
+                    <li [ngClass]="{'bg-warning': flowStep=='100'}">If yes, go back to the second step</li>
+                    <li [ngClass]="{'bg-warning': flowStep=='110'}">If no, then output the code representing P to the codestream
+                      and end
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl">
+    </div>
+    <div class="col-xl">
+      <div class="row">
+        <table border="1">
+          <tr>
+            <th>n</th>
+            <th>Pw</th>
+            <th>Cw</th>
+            <th>P</th>
+            <th>C</th>
+            <th>Cha Str</th>
+            <th>Ext Dic</th>
+          </tr>
+          <tr *ngFor="let row of dict">
+            <td>
+              {{row.n}}
+            </td>
+            <td>
+              {{row.pw}}
+            </td>
+            <td>
+              {{row.cw}}
+            </td>
+            <td>
+              {{row.p}}
+            </td>
+            <td>
+              {{row.c}}
+            </td>
+            <td>
+              {{row.c}}
+            </td>
+            <td *ngIf="row.dictCode">
+              ({{row.dictIdx}}){{row.dictCode}}
+            </td>
+            <td *ngIf="!row.dictCode"></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+
+</div>
+
