--- a/src/app/lzwd/lzwd.component.html
+++ b/src/app/lzwd/lzwd.component.html
@@ -13,9 +13,8 @@
             <input [(ngModel)]="inputTxt" type="text" style="margin-left:5px">
           </div>
           <div>
-            <label class="large">{{mainText|slice : 0 : pStartPos +1}}</label>
-            <label class="solid-red">{{p}}</label>
-            <label class="solid-blue">{{c}}</label>
+            <label *ngIf="pos>0"  class="large">{{mainText|slice : 0 : pos}}</label>
+            <label class="solid-red">{{mainText[pos]}}</label>
             <label class="large">{{mainText|slice : pos + 1}}</label>
           </div>
           <div>
@@ -23,44 +22,56 @@
             <button (click)="onClick()">Step by Step</button>
           </div>
           <div>
-            <mat-checkbox [(ngModel)]="useMarkTable">Use MarkDaly Table</mat-checkbox>
-            <mat-checkbox [(ngModel)]="autoRun" (click)="auto()">Auto Run</mat-checkbox>
+            <mat-checkbox [(ngModel)]="semiAutoRun" >Semi Auto </mat-checkbox>
+            <mat-checkbox [(ngModel)]="autoRun" >Auto Run</mat-checkbox>
           </div>
 
-          <ul class="oul">
-            <li [ngClass]="{'bg-warning': flowStep=='0'}">Init
-            </li>
-            <li [ngClass]="{'bg-warning': flowStep=='1'}">At the start the dictionary contains all possible roots and P is
-              empty.
-            </li>
-            <li [ngClass]="{'bg-warning': flowStep=='2'}">Let C be the next character in the stream</li>
-            <li [ngClass]="{'bg-warning': flowStep=='3'}">Is the new string P+C present in the dictionary?
-              <ul>
-                <li [ngClass]="{'bg-warning': flowStep=='4'}"> If yes, P = P+C (extend the string P with C)</li>
-                <li [ngClass]="{'bg-warning': flowStep=='5'}"> If no, then
-                  <ul>
-                    <li [ngClass]="{'bg-warning': flowStep=='6'}">Output the code word which represents P to the codestream
-                    </li>
-                    <li [ngClass]="{'bg-warning': flowStep=='70'}"> Add the string P+C to the dictionary</li>
-                    <li [ngClass]="{'bg-warning': flowStep=='80'}"> Set P=C (P contains only C now)</li>
-                  </ul>
+          <ol class="oul" type="1" start="0">
+            <li [ngClass]="{'bg-warning': flowStep=='0'}">INIT</li>
+            <li [ngClass]="{'bg-warning': flowStep=='1'}">AThe dictionary at the start of decoding contains all possible roots</li>
+            <li [ngClass]="{'bg-warning': flowStep=='2'}">cW = the first code word in the codestream (this would be a root)</li>
+            <li [ngClass]="{'bg-warning': flowStep=='3'}">Output the string representing cW from the dictionary to the output stream.</li>
+            <li [ngClass]="{'bg-warning': flowStep=='4'}">Set pW=cW.</li>
+            <li [ngClass]="{'bg-warning': flowStep=='5'}">cW = next code word in the codestream.</li>
+            <li [ngClass]="{'bg-warning': flowStep=='6'}">Is this string present in the dictionary?
+              <ol type="a" [ngClass]="{'bg-warning': flowStep=='61'}">
+                <li [ngClass]="{'bg-warning': flowStep=='61a'}">If it is:
+                  <ol type="i" [ngClass]="{'bg-warning': flowStep=='61'}">
+                    <li [ngClass]="{'bg-warning': flowStep=='61a'}">Output the string representing cW to the output stream</li>
+                    <li [ngClass]="{'bg-warning': flowStep=='61b'}">Set P = string representing pW</li>
+                    <li [ngClass]="{'bg-warning': flowStep=='61c'}">Set C = first character of the string representing cW.</li>
+                    <li [ngClass]="{'bg-warning': flowStep=='61d'}">Add the string P+C to the dictionary.</li>
+                  </ol>
                 </li>
-                <li [ngClass]="{'bg-warning': flowStep=='90'}"> Check if there are more characters in the stream
-                  <ul>
-                    <li [ngClass]="{'bg-warning': flowStep=='100'}">If yes, go back to the second step</li>
-                    <li [ngClass]="{'bg-warning': flowStep=='110'}">If no, then output the code representing P to the codestream
-                      and end
-                    </li>
-                  </ul>
+                <li [ngClass]="{'bg-warning': flowStep=='62'}">If it is not:
+                  <ol type="i" [ngClass]="{'bg-warning': flowStep=='62'}">
+                    <li [ngClass]="{'bg-warning': flowStep=='62a'}">Set P = string representing pW</li>
+                    <li [ngClass]="{'bg-warning': flowStep=='62b'}">Set C = the first character of the string P</li>
+                    <li [ngClass]="{'bg-warning': flowStep=='62c'}"> Output P+C to the output stream and add it to the dictionary. cW is now equal to P+C</li>
+                  </ol>
                 </li>
-              </ul>
+              </ol>
             </li>
-          </ul>
+            <li [ngClass]="{'bg-warning': flowStep=='7'}">Are there any more code words in the codestream?
+              <ol type="i">
+                <li [ngClass]="{'bg-warning': flowStep=='7a'}"> If yes then back to the fourth step</li>
+                <li [ngClass]="{'bg-warning': flowStep=='7b'}"> If no then end</li>
+              </ol>
+            </li>
+            <li [ngClass]="{'bg-warning': flowStep=='END'}">END</li>
+          </ol>
         </div>
       </div>
     </div>
-    <div class="col-xl">
-    </div>
+      <div class="col-xl">
+        <div><span class="border border-danger">Pw = {{pw}}</span></div>
+        <div><span class="border border-danger">Cw = {{cw}}</span></div>
+        <div><span class="border border-danger">P = {{p}}</span></div>
+        <div><span class="border border-primary">C = {{c}}</span></div>
+        <div>P + C = {{p + c}}</div>
+        <div>codestream = {{csop}}</div>
+        <div>pos = {{pos}}</div>
+      </div>
     <div class="col-xl">
       <div class="row">
         <table border="1">
