corrected last line of lzw decompression

--- a/src/app/lzwd/lzwd.component.html
+++ b/src/app/lzwd/lzwd.component.html
@@ -101,7 +101,7 @@
               {{row.c}}
             </td>
             <td>
-              {{row.c}}
+              {{row.csop}}
             </td>
             <td *ngIf="row.dictCode" [ngClass]="{'bg-warning': row.dictIdx==cw && flowStep=='61'}">
               ({{row.dictIdx}}){{row.dictCode}}
